--- a/sales_analysis.ipynb
+++ b/sales_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "id": "4609b433109a1a69",
    "metadata": {
     "ExecuteTime": {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 4,
    "id": "7b25fc25fd5b545e",
    "metadata": {
     "ExecuteTime": {
@@ -260,7 +260,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3874,7 +3874,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "envAI",
+   "display_name": "envAI2",
    "language": "python",
    "name": "python3"
   },
@@ -3888,7 +3888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
